# ChensQBOTv2

./: .env.dev  .env.prod  README.md  bot.py  chensbot_config.json  package-lock.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug报告.md  添加新功能.md
docs/: docusaurus.config.js
src/: bot.py  config.py
src/config/: chensbot_config.json
src/plugins/: command_events.py
src/plugins/admincommands/: root_admindeop.py  root_admingiveop.py  root_sysinfo.py  root_t0_adminban.py  root_t0_t1_adminkick.py  root_t0_t1_t2_adminhelp.py  root_t0_t1_t2_adminmute.py
src/plugins/admincommands/rootuser/: admindeop.py  admingiveop.py  sysinfo.py
src/plugins/bot/: onebotv12_init.py
src/plugins/commands/: command_events.py  finder.py  help.py  pxfinder.py  rdsfz.py  rdsimg.py  serverinfo.py  sinfo.py  time.py  userlevel.py
src/plugins/groupmgmt/: group_decrease.py  group_increase.py  group_increase_sgk.py
src/plugins/test/: test.py
src/static/text/: 90亿身份证信息.txt
