[project]
name = "ChensBOTv2"
version = "0.1.0"
description = "ChensBOTv2"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "钉钉", module_name = "nonebot.adapters.ding" },
    { name = "飞书", module_name = "nonebot.adapters.feishu" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
    { name = "QQ 频道", module_name = "nonebot.adapters.qqguild" },
    { name = "开黑啦", module_name = "nonebot.adapters.kaiheila" },
    { name = "mirai2", module_name = "nonebot.adapters.mirai2" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "Console", module_name = "nonebot.adapters.console" },
    { name = "GitHub", module_name = "nonebot.adapters.github" },
    { name = "Ntchat", module_name = "nonebot.adapters.ntchat" },
    { name = "Spigot", module_name = "nonebot.adapters.spigot" },
    { name = "BilibiliLive", module_name = "nonebot.adapter.bilibili" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo", "single_session"]
